// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blocks Accordion should render block "Accordion" without content 1`] = `<section />`;

exports[`Blocks BenefitsBlock should render block "BenefitsBlock" without content 1`] = `<section />`;

exports[`Blocks Bonus should render block "Bonus" without content 1`] = `
<section>
  <div
    class="container"
  >
    <div
      class="flex flex-wrap w-full mt-9"
    />
  </div>
</section>
`;

exports[`Blocks BonusBenefitsBlock should render block "BonusBenefitsBlock" without content 1`] = `<section />`;

exports[`Blocks Calculator should render block "Calculator" without content 1`] = `
<section>
  <div>
    <div />
  </div>
  <div
    class="flex"
    role="list"
    style="transform: translateX(-000%);"
  />
</section>
`;

exports[`Blocks Catalog should render block "Catalog" without content 1`] = `
<section>
  <div
    class="flex duration-1000 gap-3.5"
    role="list"
    style="transform: translateX(-0px);"
  />
  <div />
  <div
    class="absolute top-0 bottom-0 w-[84px] left-0 bg-opacity-from-white"
  />
  <div
    class="absolute top-0 bottom-0 w-[84px] right-0 bg-opacity-to-white"
  />
</section>
`;

exports[`Blocks ComparisonTable should render block "ComparisonTable" without content 1`] = `
<section>
  <h3
    class="font-sans m-0 text-h2 max-w-[47rem] text-center mb-9 mx-auto"
  />
  <div>
    <div
      role="table"
    />
  </div>
</section>
`;

exports[`Blocks ExchangeRateTile should render block "ExchangeRateTile" without content 1`] = `
<section>
  <div
    class="font-sans flex flex-col grow h-full items-start "
  >
    <h3
      class="font-sans m-0 text-h4 whitespace-pre-wrap text-h4"
    >
      Курсы обмена валют
    </h3>
    <div
      class="flex grow w-full justify-between"
    >
      <div
        class="flex flex-col justify-between w-full"
      >
        <div>
          <div
            class="flex"
          >
            <div
              class="mr-14 pt-4"
            >
              <table
                class="h-fit w-fit mb-[30px]"
              >
                <thead>
                  <tr>
                    <th
                      class="text-left text-m text-secondary-text"
                    >
                      Валюта
                    </th>
                    <th
                      class="text-left text-m text-secondary-text pl-11"
                    >
                      Купить
                    </th>
                    <th
                      class="text-left text-m text-secondary-text pl-11"
                    >
                      Продать
                    </th>
                  </tr>
                </thead>
                <tbody />
              </table>
              <div
                class="flex "
              >
                <svg
                  aria-hidden="true"
                  class=""
                  height="24"
                  width="24"
                >
                  <title>
                    Иконка Gps
                  </title>
                  <desc>
                    Иконка Gps
                  </desc>
                  <use
                    class="text-primary-main "
                    href="icons/GpsIcon.svg#icon"
                    xlink:href="icons/GpsIcon.svg#icon"
                  />
                </svg>
                <div
                  class="ml-3"
                >
                  <p
                    class="text-primary-main  m-0 mb-1 text-l"
                  >
                    Москва, ул.Ленина д.28
                  </p>
                  <p
                    class="text-secondary-text m-0 text-m"
                  >
                    Курс указан для ближайшего офиса - 
                    6км
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Blocks Footer should render block "Footer" without content 1`] = `
<section>
  <div
    class="flex items-stretch gap-[54px] pb-[30px] xl:gap-8"
  >
    <a
      aria-label="Россельхозбанк"
      class="inline-flex items-center font-sans no-underline w-[204px]"
      href="/"
      target="_self"
    >
      <svg
        aria-hidden="true"
        class="text-primary-main w-10"
        height="45"
        width="40"
      >
        <title>
          Иконка Logo
        </title>
        <desc>
          Иконка Logo
        </desc>
        <use
          class="text-primary-main "
          href="icons/Logo.svg#icon"
          xlink:href="icons/Logo.svg#icon"
        />
      </svg>
      <span
        class="text-black font-medium ml-2.5"
      >
        Россельхозбанк
      </span>
    </a>
    <form
      class="font-sans relative grow"
    >
      <div
        class="absolute rounded h-full flex items-center justify-center pl-4 max-w-[170px] gap-3.5 pointer-events-none"
      >
        <div
          class="w-[24px] h-[24px]"
        >
          <img
            alt="Иконка Лупа"
            aria-hidden="true"
            class=""
            height="24"
            src="icons/LoupeIcon.svg"
            title="Иконка Лупа"
            width="24"
          />
        </div>
        <label
          class="text-secondary-text font-light text-base"
          for="search-bar-input"
        >
          Поиск по сайту
        </label>
      </div>
      <input
        class="h-12 pl-12 w-full peer text-base text-black border border-solid rounded box-border
              outline-none pr-[6%] border-main-divider focus:border-primary-text font-light h-full"
        id="search-bar-input"
        name="search-bar-input"
        type="text"
        value=""
      />
      <a
        class="text-center font-sans select-none inline-block cursor-pointer no-underline text-white bg-primary-main hover:bg-primary-hover active:bg-primary-active rounded-md invisible peer-focus:visible absolute top-1 right-1"
        role="button"
      >
        <div
          class="font-normal text-sm px-9 py-[9px]"
        >
          Найти
        </div>
      </a>
    </form>
  </div>
  <div
    class="flex items-stretch gap-[54px] xl:gap-8"
  >
    <div
      class="w-[204px] flex flex-col shrink-0 overflow-hidden"
    >
      <div
        class=""
      >
        <a
          aria-label="Обратная связь"
          class="text-center font-sans select-none inline-block cursor-pointer no-underline text-white bg-primary-main hover:bg-primary-hover active:bg-primary-active rounded-md mb-6 w-full"
          href="/"
          role="link"
          target="_blank"
        >
          <div
            class="flex items-center justify-center gap-2 py-4 px-9 "
          >
            <div>
              <div
                class="text-xs text-left"
              />
              <div
                class="text-left text-base"
              >
                Обратная связь
              </div>
            </div>
          </div>
        </a>
      </div>
      <div>
        <div
          class="flex gap-2.5 "
        />
        <span
          class="font-light text-sm text-secondary-text"
        >
          Соцсети
        </span>
      </div>
      <div>
        <div
          class="flex gap-2.5 mt-6"
        />
        <span
          class="font-light text-sm text-secondary-text"
        >
          Мобильное приложение
        </span>
      </div>
    </div>
    <div
      class="flex items-start justify-between gap-11 xl:gap-5 pt-[3px]"
    />
  </div>
  <div
    class="mt-[98px]"
  />
  <div
    class=""
  >
    <div
      class="pt-5"
    >
      <span
        class="font-sans font-light text-xs text-secondary-text"
      >
        © 2000-2022 АО «Россельхозбанк» Генеральная лицензия Банка России № 3349 от 12.08.2015 г.
      </span>
    </div>
  </div>
</section>
`;

exports[`Blocks Gallery should render block "Gallery" without content 1`] = `
<section>
  <div>
    <div
      class="absolute top-0 left-0 bottom-0 w-[84px] bg-gradient-to-r from-white to-transparent"
    />
    <div
      class="flex flex-col items-center mb-8"
    />
    <div
      class="flex justify-center duration-1000"
      role="list"
      style="transform: translateX(-0px);"
    />
  </div>
  <div />
  <div
    class="absolute top-0 left-0 bottom-0 w-[82px] bg-opacity-from-white"
  />
  <div
    class="absolute top-0 right-0 bottom-0 w-[82px] bg-opacity-to-white"
  />
</section>
`;

exports[`Blocks GracePeriod should render block "GracePeriod" without content 1`] = `
<section>
  <h3
    class="font-sans m-0 text-h3 text-center"
  />
  <div
    class="font-light text-base-md text-center mt-3"
  />
</section>
`;

exports[`Blocks GroupBlock should render block "GroupBlock" without content 1`] = `<section />`;

exports[`Blocks Header should render block "Header" without content 1`] = `
<section>
  <div
    class="container"
  >
    <div
      class="flex items-center"
    >
      <a
        aria-label="Россельхозбанк"
        class="inline-flex items-center font-sans no-underline mr-8"
        href="/"
        target="_self"
      >
        <svg
          aria-hidden="true"
          class="text-primary-main w-10"
          height="45"
          width="40"
        >
          <title>
            Иконка Logo
          </title>
          <desc>
            Иконка Logo
          </desc>
          <use
            class="text-primary-main "
            href="icons/Logo.svg#icon"
            xlink:href="icons/Logo.svg#icon"
          />
        </svg>
        <span
          class="text-black font-medium ml-2.5"
        >
          Россельхозбанк
        </span>
      </a>
      <div
        class="flex items-center ml-auto"
      >
        <a
          aria-label="Местоположение"
          class="border-transparent inline-block border border-solid bg-transparent text-center no-underline  mr-5"
          href="#"
          rel="noopener noreferrer"
        >
          <span
            class="text-primary-text hover:text-primary-main font-sans font-light text-sm"
          >
            Москва
          </span>
        </a>
        <a
          aria-label="Список всех доступных офисов и банкоматов"
          class="border-transparent inline-block border border-solid bg-transparent text-center no-underline  mr-7"
          href="#"
          rel="noopener noreferrer"
        >
          <span
            class="text-primary-text hover:text-primary-main font-sans font-light text-sm"
          >
            Офисы и банкоматы
          </span>
        </a>
        <button
          aria-label="Поиск по сайту"
          class="border-0 p-0 w-[24px] h-[24px] flex items-center bg-inherit cursor-pointer mr-5 text-primary-text hover:text-primary-main"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-full"
          >
            <title>
              Иконка Лупа
            </title>
            <desc>
              Иконка Лупа
            </desc>
            <use
              class="text-black "
              href="icons/LoupeIcon.svg#icon"
              xlink:href="icons/LoupeIcon.svg#icon"
            />
          </svg>
        </button>
        <button
          aria-label="Дополнительные ссылки"
          class="border-0 p-0 w-[24px] h-[24px] flex items-center bg-inherit cursor-pointer text-secondary-light hover:text-secondary-hover min-w-[32px] min-h-[32px]"
          disabled=""
          type="button"
        >
          <svg
            aria-hidden="true"
            class="h-full bg-secondary-light rounded-full"
          >
            <title>
              Иконка Сетка (белая)
            </title>
            <desc>
              Иконка Сетка (белая)
            </desc>
            <use
              class="text-black "
              href="icons/GridIcon.svg#icon"
              xlink:href="icons/GridIcon.svg#icon"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="mt-6 h-[1px] bg-main-divider"
    />
  </div>
</section>
`;

exports[`Blocks Headline should render block "Headline" without content 1`] = `<section />`;

exports[`Blocks Insurance should render block "Insurance" without content 1`] = `
<section>
  <section />
  <div>
    <div
      class="mt-5 mx-auto flex justify-center gap-[122px] mt-[30px]"
    >
      <div
        class="w-[558px] m-auto"
      />
    </div>
  </div>
</section>
`;

exports[`Blocks InsuranceAmountBlock should render block "InsuranceAmountBlock" without content 1`] = `
<section>
  <div
    class="flex"
    role="list"
    style="transform: translateX(-000%);"
  />
</section>
`;

exports[`Blocks LinkDocs should render block "LinkDocs" without content 1`] = `
<section>
  <section />
</section>
`;

exports[`Blocks MiniGallery should render block "MiniGallery" without content 1`] = `
<section>
  <div>
    <div
      class="absolute top-0 left-0 bottom-0 w-[84px] bg-gradient-to-r from-white to-transparent"
    />
    <div
      class="flex flex-col items-center mb-8"
    />
    <div
      class="flex justify-center duration-1000"
      role="list"
      style="transform: translateX(-0px);"
    />
  </div>
  <div />
  <div
    class="absolute top-0 left-0 bottom-0 w-[82px] bg-opacity-from-white"
  />
  <div
    class="absolute top-0 right-0 bottom-0 w-[82px] bg-opacity-to-white"
  />
</section>
`;

exports[`Blocks MobileAppTile should render block "MobileAppTile" without content 1`] = `
<section>
  <div
    class="font-sans flex flex-col grow h-full items-start "
  >
    <h3
      class="font-sans m-0 text-h4 whitespace-pre-wrap max-w-[509px] mb-6
                  text-primary-text"
    >
      Мобильное приложение
    </h3>
    <div
      class="flex grow w-full justify-between"
    >
      <div
        class="flex flex-col justify-between w-full"
      >
        <div>
          <div
            class="flex flex-1 items-center"
          >
            <span
              class="text-m text-secondary-text"
            >
              Наведите камеру телефона на QR-код и скачайте приложение
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Blocks Navigation should render block "Navigation" without content 1`] = `
<section>
  <h2
    class="font-medium text-xl-light m-0"
  />
</section>
`;

exports[`Blocks NavigatorTabs should render block "NavigatorTabs" without content 1`] = `<section />`;

exports[`Blocks OtherProducts should render block "OtherProducts" without content 1`] = `<section />`;

exports[`Blocks PictureText should render block "PictureText" without content 1`] = `
<section>
  <h3
    class="font-sans m-0 text-h2 text-center"
  />
  <div
    class="flex justify-center mt-9"
  />
</section>
`;

exports[`Blocks Placeholder should render block "Placeholder" without content 1`] = `
<section>
  <section>
    <div
      class="text-xl-light text-primary-text text-left"
    >
      Блок в разработке...
    </div>
  </section>
  <figure
    class="m-0 min-w-[600px]"
  >
    <div
      class="h-4 mt-2 bg-secondary-light"
      style="width: 100%;"
    />
    <div
      class="h-4 mt-2 bg-secondary-light"
      style="width: 61%;"
    />
    <div
      class="h-4 mt-2 bg-secondary-light"
      style="width: 38%;"
    />
    <div
      class="h-4 mt-2 bg-secondary-light"
      style="width: 23%;"
    />
  </figure>
</section>
`;

exports[`Blocks ProductBlock should render block "ProductBlock" without content 1`] = `
<section>
  <div
    class="flex grow justify-between items-stretch "
  >
    <div
      class="flex flex-col "
    >
      <section />
      <div
        class="font-sans flex flex-col grow h-full items-start "
      >
        
        <div
          class="flex grow w-full justify-between"
        >
          <div
            class="flex flex-col justify-between w-full"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Blocks ProductGallery should render block "ProductGallery" without content 1`] = `
<section>
  <div
    class="flex duration-1000 pb-14"
    role="list"
    style="transform: translateX(-000%);"
  />
  <div
    class="flex items-center absolute bottom-6 left-0 right-0 px-[26px] box-border"
  />
</section>
`;

exports[`Blocks ProductTile should render block "ProductTile" without content 1`] = `
<section>
  <div
    class="z-[1]"
  >
    <section />
    <div
      class="flex mt-4"
    />
  </div>
</section>
`;

exports[`Blocks PromoTile should render block "PromoTile" without content 1`] = `
<section>
  <div
    class="font-sans flex flex-col grow h-full items-start "
  >
    <div>
      <section>
        <h2
          class="font-sans m-0 text-h2 whitespace-pre-wrap text-primary-text text-left"
        >
          Акции и спецпредложения
        </h2>
      </section>
    </div>
    <div
      class="flex grow w-full justify-between"
    >
      <div
        class="flex flex-col justify-between w-full"
      >
        <div>
          <div
            class="mt-1.5"
          >
            <div
              class="text-base"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Blocks Recommendation should render block "Recommendation" without content 1`] = `
<section>
  <div
    class="flex duration-1000 gap-3.5"
    role="list"
    style="transform: translateX(-0px);"
  />
  <div>
    <div />
  </div>
  <div
    class="absolute top-0 bottom-0 w-[84px] left-0 bg-opacity-from-white"
  />
  <div
    class="absolute top-0 bottom-0 w-[84px] right-0 bg-opacity-to-white"
  />
</section>
`;

exports[`Blocks StepsBlock should render block "StepsBlock" without content 1`] = `<section />`;

exports[`Blocks TariffsTable should render block "TariffsTable" without content 1`] = `<section />`;

exports[`Blocks TextBlock should render block "TextBlock" without content 1`] = `
<section>
  <div
    class="py-0.5"
  />
</section>
`;

exports[`Blocks Tile should render block "Tile" without content 1`] = `
<section>
  <div
    class="font-sans flex flex-col grow h-full items-start "
  >
    <div
      class="flex grow w-full justify-between"
    >
      <div
        class="flex flex-col justify-between w-full"
      >
        <div />
      </div>
    </div>
  </div>
</section>
`;
